--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "noEmit": true,
+    "module": "esnext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -21,8 +22,7 @@
   },
   "include": [
     "src",
-    "tests",
-    "@types"
+    "tests"
   ],
   "exclude": [
     "node_modules",
