--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     ],
     "scripts": {
         "build": "rollup -c",
-        "prepare": "rm -rf dist && tsc --version && tsc -p tsconfig-esm.json",
-        "test": "jest",
+        "prepare": "npm run build",
+        "test": "vitest",
         "lint": "npx eslint src",
         "lint:fix": "npm run lint -- --fix",
         "prettier": "npx prettier src tests --check",
@@ -39,11 +39,7 @@
     },
     "dependencies": {
         "@types/uuid": "^8.3.4",
-        "bn.js": "^5.2.1",
-        "cosmian_cover_crypt": "^7.0.1",
-        "cosmian_findex": "^0.10.0",
         "js-crypto-hmac": "^1.0.4",
-        "leb128": "^0.0.5",
         "process": "^0.11.10",
         "reflect-metadata": "^0.1.13",
         "stream-browserify": "^3.0.0"
@@ -52,7 +48,6 @@
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@rollup/plugin-typescript": "^9.0.2",
         "@rollup/plugin-wasm": "^6.0.1",
-        "@types/bn.js": "^5.1.1",
         "@types/jest": "^29.0.0",
         "@types/node": "^18.7.18",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
@@ -73,6 +68,7 @@
         "ts-loader": "^9.3.1",
         "typescript": "^4.9.0",
         "uuid": "^9.0.0",
+        "vitest": "^0.25.2",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.11.1"
