--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "dist"
     ],
     "scripts": {
-        "build": "rollup -c",
+        "build": "rollup -c && tsc",
+        "watch": "rollup --watch -c",
         "prepare": "npm run build",
         "test": "vitest",
         "lint": "npx eslint src",
