--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,9 @@
         "args": "all",
         "ignoreRestSiblings": false
       }
-    ]
+    ],
+    "jsdoc/require-param-type": 0,
+    "jsdoc/require-returns-type": 0
   },
   "ignorePatterns": [
     "tests/wasm_lib"
