--- a/package.json
+++ b/package.json
@@ -39,17 +39,13 @@
         "format": "npm run prettier:fix && npm run lint:fix"
     },
     "dependencies": {
-        "@types/uuid": "^8.3.4",
-        "js-crypto-hmac": "^1.0.4",
         "process": "^0.11.10",
-        "reflect-metadata": "^0.1.13",
         "stream-browserify": "^3.0.0"
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@rollup/plugin-typescript": "^9.0.2",
         "@rollup/plugin-wasm": "^6.0.1",
-        "@types/jest": "^29.0.0",
         "@types/node": "^18.7.18",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "eslint": "^8.23.1",
@@ -59,19 +55,12 @@
         "eslint-plugin-jsdoc": "^39.3.6",
         "eslint-plugin-n": "^15.2.5",
         "eslint-plugin-promise": "^6.0.1",
-        "jest": "^28.1.3",
         "prettier": "2.7.1",
         "puppeteer": "^19.2.0",
         "redis": "^4.3.1",
         "rollup": "^3.3.0",
         "sqlite3": "^5.1.2",
-        "ts-jest": "^28.0.8",
-        "ts-loader": "^9.3.1",
         "typescript": "^4.9.0",
-        "uuid": "^9.0.0",
-        "vitest": "^0.25.2",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.11.1"
+        "vitest": "^0.25.2"
     }
 }
