--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,5 +31,8 @@
     ],
     "jsdoc/require-param-type": 0,
     "jsdoc/require-returns-type": 0
-  }
+  },
+  "ignorePatterns": [
+    "src/pkg"
+  ]
 }
