Download WASM from jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ stages:
   before_script:
     - node --version
     - npm --version
+    - apt install -y curl unzip
+    - ./download_wasm.sh
     - npm install
 
 eslint:
