Fix some bug with VendorAttribute plural vs singular

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ example_nodejs:
   script:
     - cd examples/nodejs
     - npm install
-    - node index.mjs
+    - node index.mjs 10
 
 pack:
   stage: pack
