--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,18 @@ example_reactjs:
     when: on_failure
     expire_in: 1 week
 
+check_beta_demo:
+  image: gitlab.cosmian.com:5000/core/ci-puppeteer:latest
+  extends: .services
+  stage: test
+  script:
+    - node examples/test/chrome.mjs https://demo-cloudproof.cosmian.com/beta https://demo-cloudproof.cosmian.com/kms
+  artifacts:
+    paths:
+      - error.png
+    when: on_failure
+    expire_in: 1 week
+
 example_webpack:
   extends: .services
   stage: test
@@ -111,32 +123,5 @@ publish:
     - npm install
     - echo "//registry.npmjs.org/:_authToken=$NPM_ACCESS_TOKEN" > ~/.npmrc
     - npm publish
-  rules:
-    - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
-
-deploy:
-  image: docker
-  stage: publish
-  script:
-    - docker build -f demo/Dockerfile -t demo .
-    - docker save demo > demo/demo.tar
-    - scp demo/docker-compose.yml demo/demo.tar demo/run.sh cosmian@demo-cloudproof.cosmian.com:~/demo_cloudproof/
-    - ssh cosmian@demo-cloudproof.cosmian.com 'bash ~/demo_cloudproof/run.sh'
-  rules:
-    - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
-
-check_deploy:
-  image: gitlab.cosmian.com:5000/core/ci-puppeteer:latest
-  needs:
-    - deploy
-  extends: .services
-  stage: publish
-  script:
-    - node examples/test/chrome.mjs https://demo-cloudproof.cosmian.com/ https://demo-cloudproof.cosmian.com/kms
-  artifacts:
-    paths:
-      - error.png
-    when: on_failure
-    expire_in: 1 week
   rules:
     - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
