--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@rollup/plugin-typescript": "^9.0.2",
         "@rollup/plugin-wasm": "^6.0.1",
         "@types/node": "^18.7.18",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "eslint": "^8.23.1",
         "eslint-config-prettier": "^8.5.0",
@@ -61,6 +62,7 @@
         "rollup": "^3.3.0",
         "sqlite3": "^5.1.2",
         "typescript": "^4.9.0",
+        "uuid": "^9.0.0",
         "vitest": "^0.25.2"
     }
 }
