--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "lint": "npx eslint src",
         "lint:fix": "npm run lint -- --fix",
         "prettier:check": "npx prettier src tests --check",
-        "prettier:fix": "npm run prettier -- --write",
+        "prettier:fix": "npm run prettier:check -- --write",
         "format": "npm run prettier:fix && npm run lint:fix"
     },
     "dependencies": {
