Add covercrypt benches

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "build": "tsc --version && rollup --version && rollup -c && tsc",
         "watch": "rollup --watch -c",
         "prepare": "npm run build",
-        "test": "vitest",
+        "test": "vitest --run",
+        "bench": "vitest bench --run",
         "lint": "npx eslint src",
         "lint:fix": "npm run lint -- --fix",
         "prettier:check": "npx prettier src tests --check",
