--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@
 
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+exclude: tests/data
 repos:
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v2.1.1
@@ -15,43 +16,39 @@ repos:
         stages: [commit-msg]
         args: [] # optional: list of Conventional Commits types to allow e.g. [feat, fix, ci, chore, test]
 
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.4
+    hooks:
+      - id: prettier
+        stages: [commit]
+        exclude_types:
+          - yaml
+          - markdown
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.32.2
+    hooks:
+      - id: markdownlint-fix
+        args: [--disable=MD013, --disable=MD024, --disable=MD041]
+
   - repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
     rev: v1.1.2
     hooks:
       - id: htmlhint
       - id: dockerfile_lint
       - id: markdown-toc
-
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.4
-    hooks:
-      - id: prettier
-        types_or:
-          [
-            bash,
-            bib,
-            c,
-            css,
-            dart,
-            dockerfile,
-            html,
-            java,
-            javascript,
-            jsx,
-            json,
-            python3,
-            sql,
-            ts,
-            tsx,
-            sh,
-          ]
-        args: [--semi=false]
+        args: [--bullets="-"]
 
   - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
     rev: 0.2.2
     hooks:
       - id: yamlfmt
-        args: [--mapping, "2", --sequence, "4", --offset, "2"]
+        args: [--mapping, '2', --sequence, '4', --offset, '2']
+
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.12.14
+    hooks:
+      - id: typos
 
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.27.0
