--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-empty-interface": 0,
+    "no-labels": 0,
     "no-unused-vars": [
       "error",
       {
