Remove graph_upsert

--- a/examples/vuejs/tsconfig.json
+++ b/examples/vuejs/tsconfig.json
@@ -5,9 +5,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "lib": [
+      "dom",
+      "es2019"
+    ],
   },
-
   "references": [
     {
       "path": "./tsconfig.config.json"
