--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ on: push
 
 jobs:
   # Caching the build is not working because we're
-  # using ubuntu on this job but a node:18 container
+  # using ubuntu on this job but a node container
   # for the other jobs requiring services.
-  # We also need to install zstd inside the node:18 container
+  # We also need to install zstd inside the node container
   # which take a lot of time (maybe more than building the project
   # again…).
   #
@@ -45,7 +45,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    container: node:18
+    container: node
 
     services:
       kms:
@@ -76,3 +76,35 @@ jobs:
         env:
           REDIS_HOST: redis
           KMS_HOST: kms
+
+  example_vuejs:
+    runs-on: ubuntu-latest
+    container: node
+
+    services:
+      kms:
+        image: cosmian/kms
+        env:
+          COSMIAN_SERVER_URL: http://localhost:9998
+          KMS_PUBLIC_PATH: /tmp
+          KMS_PRIVATE_PATH: /tmp
+          KMS_SHARED_PATH: /tmp
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies and build
+        run: apt update && apt install -y gconf-service libgbm-dev libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
+
+      - name: Install dependencies and build
+        run: npm install
+
+      - name: Test VueJS
+        run: |
+          cd examples/vuejs
+          npm install
+          npm run build
+          npm run serve -- --port 8090 &
+          sleep 5
+          node ../test/chrome.mjs http://localhost:8090 http://kms:9998
