--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
-    container: cosmian/node_ci_puppeteer
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out repository code
@@ -21,15 +20,40 @@ jobs:
       - name: Install dependencies and build
         run: npm install
 
-  lint:
-    runs-on: ubuntu-22.04
+  build_in_docker:
+    runs-on: ubuntu-latest
+    container: cosmian/node_ci_puppeteer
 
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
 
+      - name: Cache build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            dist
+          key: build-docker-${{ github.run_id }}
+
       - name: Install dependencies and build
         run: npm install
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Cache build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            dist
+          key: build-${{ github.run_id }}
 
       - name: Check Prettier
         run: npm run prettier:check
@@ -40,7 +64,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container: cosmian/node_ci_puppeteer
-    needs: build
+    needs: build_in_docker
 
     services:
       kms:
@@ -69,7 +93,7 @@ jobs:
           path: |
             node_modules
             dist
-          key: build-${{ github.run_id }}
+          key: build-docker-${{ github.run_id }}
 
       - name: Test
         run: npm test
@@ -80,7 +104,7 @@ jobs:
   example_vuejs:
     runs-on: ubuntu-latest
     container: cosmian/node_ci_puppeteer
-    needs: build
+    needs: build_in_docker
 
     services:
       kms:
@@ -101,7 +125,7 @@ jobs:
           path: |
             node_modules
             dist
-          key: build-${{ github.run_id }}
+          key: build-docker-${{ github.run_id }}
 
       - name: Test VueJS
         run: |
@@ -111,3 +135,116 @@ jobs:
           npm run serve -- --port 8090 &
           sleep 5
           node ../test/chrome.mjs http://localhost:8090 http://kms:9998
+
+  example_reactjs:
+    runs-on: ubuntu-latest
+    container: cosmian/node_ci_puppeteer
+    needs: build_in_docker
+
+    services:
+      kms:
+        image: cosmian/kms
+        env:
+          COSMIAN_SERVER_URL: http://localhost:9998
+          KMS_PUBLIC_PATH: /tmp
+          KMS_PRIVATE_PATH: /tmp
+          KMS_SHARED_PATH: /tmp
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Cache build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            dist
+          key: build-docker-${{ github.run_id }}
+
+      - name: Test ReactJS
+        run: |
+          cd examples/reactjs
+          npm install
+          npm run build
+          npm run serve -- --port 8090 &
+          sleep 5
+          node ../test/chrome.mjs http://localhost:8090 http://kms:9998
+
+  example_webpack:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Cache build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            dist
+          key: build-${{ github.run_id }}
+
+      - name: Test Webpack
+        run: |
+          cd examples/webpack
+          npm install
+          npx webpack
+
+  example_nodejs:
+    runs-on: ubuntu-latest
+    container: cosmian/node_ci_puppeteer
+    needs: build_in_docker
+
+    services:
+      kms:
+        image: cosmian/kms
+        env:
+          COSMIAN_SERVER_URL: http://localhost:9998
+          KMS_PUBLIC_PATH: /tmp
+          KMS_PRIVATE_PATH: /tmp
+          KMS_SHARED_PATH: /tmp
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Cache build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            dist
+          key: build-docker-${{ github.run_id }}
+
+      - name: Test NodeJS
+        run: |
+          cd examples/nodejs
+          npm install
+          node test.mjs 10
+
+  example_imdb:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Cache build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            dist
+          key: build-${{ github.run_id }}
+
+      - name: Test IMDB
+        run: |
+          cd examples/nodejs_search_imdb
+          curl https://datasets.imdbws.com/title.basics.tsv.gz --output imdb.tsv.gz
+          gzip -d imdb.tsv.gz
+          npm install
+          node test.mjs
