--- a/examples/reactjs/package.json
+++ b/examples/reactjs/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "puppeteer": "^19.2.0"
   }
 }
