--- a/examples/reactjs/package.json
+++ b/examples/reactjs/package.json
@@ -43,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "http-server": "^14.1.1",
-    "puppeteer": "^19.2.0"
+    "http-server": "^14.1.1"
   }
 }
