--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
+            /github/home/.cache/puppeteer
             node_modules
             dist
           key: build-docker-${{ github.run_id }}
@@ -91,6 +92,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
+            /github/home/.cache/puppeteer
             node_modules
             dist
           key: build-docker-${{ github.run_id }}
@@ -123,6 +125,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
+            /github/home/.cache/puppeteer
             node_modules
             dist
           key: build-docker-${{ github.run_id }}
@@ -159,6 +162,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
+            /github/home/.cache/puppeteer
             node_modules
             dist
           key: build-docker-${{ github.run_id }}
@@ -217,6 +221,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
+            /github/home/.cache/puppeteer
             node_modules
             dist
           key: build-docker-${{ github.run_id }}
