--- a/examples/nodejs_search_imdb/package.json
+++ b/examples/nodejs_search_imdb/package.json
@@ -1,8 +1,7 @@
 {
   "name": "upsert_imdb",
-  "devDependencies": {
+  "dependencies": {
     "better-sqlite3": "^8.0.1",
-    "cloudproof_js": "file:../..",
-    "ts-node": "^10.9.1"
+    "cloudproof_js": "file:../.."
   }
 }
