--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,20 @@
 ---
-name: Publish to NPM
+name: Release
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - '*'
 
 jobs:
+  release:
+    name: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Release
+        uses: softprops/action-gh-release@v1
+
   publish:
     runs-on: ubuntu-latest
     steps:
