--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudproof_js",
-  "version": "6.1.1",
+  "version": "7.0.0",
   "license": "MIT",
   "description": "Cosmian Cloudproof javascript client library",
   "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>, Emmanuel Coste<emmanuel.coste@cosmian.com>, Thibaud Dauce<thibaud.dauce@cosmian.com>",
@@ -42,7 +42,8 @@
   "dependencies": {
     "better-sqlite3": "^8.0.1",
     "process": "^0.11.10",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "typescript-language-server": "^3.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
