--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,279 +4,141 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            dist
-          key: build-${{ github.run_id }}
-
-      - name: Install dependencies and build
-        run: npm install
+    uses: ./.github/workflows/js.yml
+    with:
+      subcommands: |
+        python3 scripts/download_wasm.py
+        npm install
 
   build_in_docker:
-    runs-on: ubuntu-latest
-    container: cosmian/node_ci_puppeteer
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            /github/home/.cache/puppeteer
-            node_modules
-            dist
-          key: build-docker-${{ github.run_id }}
-
-      - name: Install dependencies and build
-        run: npm install
+    uses: ./.github/workflows/js_in_docker.yml
+    with:
+      subcommands: |
+        python3 scripts/download_wasm.py
+        npm install
 
   lint:
-    runs-on: ubuntu-latest
     needs: build
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            dist
-          key: build-${{ github.run_id }}
-
-      - name: Check Prettier
-        run: npm run prettier:check
-
-      - name: Lint
-        run: npm run lint
+    uses: ./.github/workflows/js.yml
+    with:
+      subcommands: |
+        npm run prettier:check
+        npm run lint
 
   test:
-    runs-on: ubuntu-latest
-    container: cosmian/node_ci_puppeteer
     needs: build_in_docker
-
-    services:
-      kms:
-        image: cosmian/kms
-        env:
-          COSMIAN_SERVER_URL: http://localhost:9998
-          KMS_PUBLIC_PATH: /tmp
-          KMS_PRIVATE_PATH: /tmp
-          KMS_SHARED_PATH: /tmp
-
-      redis:
-        image: redis
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            /github/home/.cache/puppeteer
-            node_modules
-            dist
-          key: build-docker-${{ github.run_id }}
-
-      - name: Test
-        run: npm test
-        env:
-          REDIS_HOST: redis
-          KMS_HOST: kms
+    uses: ./.github/workflows/js_in_docker.yml
+    with:
+      subcommands: |
+        npm test
 
   example_vuejs:
-    runs-on: ubuntu-latest
-    container: cosmian/node_ci_puppeteer
     needs: build_in_docker
-
-    services:
-      kms:
-        image: cosmian/kms
-        env:
-          COSMIAN_SERVER_URL: http://localhost:9998
-          KMS_PUBLIC_PATH: /tmp
-          KMS_PRIVATE_PATH: /tmp
-          KMS_SHARED_PATH: /tmp
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            /github/home/.cache/puppeteer
-            node_modules
-            dist
-          key: build-docker-${{ github.run_id }}
-
-      - name: Test VueJS
-        run: |
-          cd examples/vuejs
-          npm install
-          npm run build
-          npm run serve -- --port 8090 &
-          sleep 5
-          cd ../test
-          node chrome.mjs http://localhost:8090 http://kms:9998
+    uses: ./.github/workflows/js_in_docker.yml
+    with:
+      subcommands: |
+        cd examples/vuejs
+        npm install
+        npm run build
+        npm run serve -- --port 8090 &
+        sleep 5
+        cd ../test
+        node chrome.mjs http://localhost:8090 http://kms:9998
 
   example_reactjs:
-    runs-on: ubuntu-latest
-    container: cosmian/node_ci_puppeteer
     needs: build_in_docker
-
-    services:
-      kms:
-        image: cosmian/kms
-        env:
-          COSMIAN_SERVER_URL: http://localhost:9998
-          KMS_PUBLIC_PATH: /tmp
-          KMS_PRIVATE_PATH: /tmp
-          KMS_SHARED_PATH: /tmp
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            /github/home/.cache/puppeteer
-            node_modules
-            dist
-          key: build-docker-${{ github.run_id }}
-
-      - name: Test ReactJS
-        run: |
-          cd examples/reactjs
-          npm install
-          npm run build
-          npm run serve -- --port 8090 &
-          sleep 5
-          cd ../test
-          node chrome.mjs http://localhost:8090 http://kms:9998
+    uses: ./.github/workflows/js_in_docker.yml
+    with:
+      subcommands: |
+        cd examples/reactjs
+        npm install
+        npm run build
+        npm run serve -- --port 8090 &
+        sleep 5
+        cd ../test
+        node chrome.mjs http://localhost:8090 http://kms:9998
 
   example_webpack:
-    runs-on: ubuntu-latest
     needs: build
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            dist
-          key: build-${{ github.run_id }}
-
-      - name: Test Webpack
-        run: |
-          cd examples/webpack
-          npm install
-          npx webpack
+    uses: ./.github/workflows/js.yml
+    with:
+      subcommands: |
+        cd examples/webpack
+        npm install
+        npx webpack
 
   example_nodejs:
-    runs-on: ubuntu-latest
-    container: cosmian/node_ci_puppeteer
     needs: build_in_docker
-
-    services:
-      kms:
-        image: cosmian/kms
-        env:
-          COSMIAN_SERVER_URL: http://localhost:9998
-          KMS_PUBLIC_PATH: /tmp
-          KMS_PRIVATE_PATH: /tmp
-          KMS_SHARED_PATH: /tmp
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            /github/home/.cache/puppeteer
-            node_modules
-            dist
-          key: build-docker-${{ github.run_id }}
-
-      - name: Test NodeJS
-        run: |
-          cd examples/nodejs
-          npm install
-          node test.mjs 10
-        env:
-          KMS_HOST: kms
+    uses: ./.github/workflows/js_in_docker.yml
+    with:
+      subcommands: |
+        cd examples/nodejs
+        npm install
+        node test.mjs 10
 
   example_imdb:
-    runs-on: ubuntu-latest
     needs: build
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            dist
-          key: build-${{ github.run_id }}
-
-      - name: Test IMDB
-        run: |
-          cd examples/nodejs_search_imdb
-          curl https://datasets.imdbws.com/title.basics.tsv.gz --output imdb.tsv.gz
-          gzip -d imdb.tsv.gz
-          npm install
-          node test.mjs
+    uses: ./.github/workflows/js.yml
+    with:
+      subcommands: |
+        cd examples/nodejs_search_imdb
+        curl https://datasets.imdbws.com/title.basics.tsv.gz --output imdb.tsv.gz
+        gzip -d imdb.tsv.gz
+        npm install
+        node test.mjs
 
   example_full_text_search:
-    runs-on: ubuntu-latest
     needs: build
+    uses: ./.github/workflows/js.yml
+    with:
+      subcommands: |
+        cd examples/full_text_search
+        npm install
+        node test.mjs
 
+  publish-dry-run:
+    needs:
+      - lint
+      - test
+      - example_imdb
+      - example_full_text_search
+      - example_nodejs
+      - example_webpack
+      - example_reactjs
+      - example_vuejs
+    uses: ./.github/workflows/js.yml
+    with:
+      subcommands: |
+        echo "//registry.npmjs.org/:_authToken=$NPM_ACCESS_TOKEN" > ~/.npmrc
+        npm publish --dry-run
+    secrets: inherit
+
+  publish:
+    needs:
+      - publish-dry-run
+    uses: ./.github/workflows/js.yml
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    with:
+      subcommands: |
+        echo "//registry.npmjs.org/:_authToken=$NPM_ACCESS_TOKEN" > ~/.npmrc
+        npm publish
+    secrets: inherit
+
+  release:
+    needs:
+      - publish-dry-run
+    name: release
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v1
+      - name: Release
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
 
-      - name: Cache build
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            dist
-          key: build-${{ github.run_id }}
-
-      - name: Test Full Text Search
-        run: |
-          cd examples/full_text_search
-          npm install
-          node test.mjs
+  cleanup:
+    needs:
+      - publish
+      - release
+    uses: Cosmian/reusable_workflows/.github/workflows/cleanup_cache.yml@main
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    secrets: inherit
