--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -15,7 +15,7 @@ jobs:
 
     services:
       kms:
-        image: cosmian/kms
+        image: cosmian/kms:4.0.1
         env:
           COSMIAN_SERVER_URL: http://localhost:9998
           KMS_PUBLIC_PATH: /tmp
