--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
+    "base64-js": "^1.5.1",
     "better-sqlite3": "^8.0.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
     "@rollup/plugin-wasm": "^6.0.1",
