--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.2.4",
     "base64-js": "^1.5.1",
     "better-sqlite3": "^8.0.1",
+    "jssha": "^3.3.0",
     "node-fetch": "^3.3.0",
     "process": "^0.11.10",
     "randombytes": "^2.1.0",
