--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -23,9 +23,9 @@ jobs:
             node_modules
             dist
             src/pkg
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ github.ref_name }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-${{ github.ref_name }}
 
       - run: ${{ inputs.subcommands }}
         env:
