--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -42,9 +42,9 @@ jobs:
             node_modules
             dist
             src/pkg
-          key: ${{ runner.os }}-docker-node-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-docker-node-${{ github.ref_name }}
           restore-keys: |
-            ${{ runner.os }}-docker-node-
+            ${{ runner.os }}-docker-node-${{ github.ref_name }}
 
       - name: Test
         run: ${{ inputs.subcommands }}
