--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   "dependencies": {
     "better-sqlite3": "^8.0.1",
     "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "typescript-language-server": "^3.0.1"
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -65,6 +64,7 @@
     "redis": "^4.3.1",
     "rollup": "^3.3.0",
     "typescript": "^4.9.0",
+    "typescript-language-server": "^3.0.1",
     "uuid": "^9.0.0",
     "vitest": "^0.25.2"
   }
