--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudproof_js",
-  "version": "6.1.1",
+  "version": "7.0.0",
   "license": "MIT",
   "description": "Cosmian Cloudproof javascript client library",
   "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>, Emmanuel Coste<emmanuel.coste@cosmian.com>, Thibaud Dauce<thibaud.dauce@cosmian.com>",
@@ -64,6 +64,7 @@
     "redis": "^4.3.1",
     "rollup": "^3.3.0",
     "typescript": "^4.9.0",
+    "typescript-language-server": "^3.0.1",
     "uuid": "^9.0.0",
     "vitest": "^0.25.2"
   }
