--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -42,9 +42,9 @@ jobs:
             node_modules
             dist
             src/pkg
-          key: ${{ runner.os }}-docker-node-${{ github.ref_name }}
+          key: ${{ runner.os }}-docker-node-${{ github.ref_name }}-${{ hashFiles('package.json') }}
           restore-keys: |
-            ${{ runner.os }}-docker-node-${{ github.ref_name }}
+            ${{ runner.os }}-docker-node-${{ github.ref_name }}-${{ hashFiles('package.json') }}
 
       - name: Test
         run: ${{ inputs.subcommands }}
