--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       - KMS_SHARED_PATH=/tmp
     ports:
       - 9998:9998
+  findex_cloud:
+    image: ghcr.io/cosmian/findex_cloud:0.1.0
+    ports:
+      - 8080:8080
   redis:
     image: redis:latest
     ports:
