--- a/examples/nodejs_search_imdb/package.json
+++ b/examples/nodejs_search_imdb/package.json
@@ -2,6 +2,7 @@
   "name": "upsert_imdb",
   "dependencies": {
     "better-sqlite3": "^8.0.1",
-    "cloudproof_js": "file:../.."
+    "cloudproof_js": "file:../..",
+    "node-fetch": "^3.3.1"
   }
 }
