--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
 
     services:
       kms:
-        image: cosmian/kms
+        image: cosmian/kms:4.0.1
         env:
           COSMIAN_SERVER_URL: http://localhost:9998
           KMS_PUBLIC_PATH: /tmp
@@ -111,7 +111,7 @@ jobs:
 
     services:
       kms:
-        image: cosmian/kms
+        image: cosmian/kms:4.0.1
         env:
           COSMIAN_SERVER_URL: http://localhost:9998
           KMS_PUBLIC_PATH: /tmp
@@ -148,7 +148,7 @@ jobs:
 
     services:
       kms:
-        image: cosmian/kms
+        image: cosmian/kms:4.0.1
         env:
           COSMIAN_SERVER_URL: http://localhost:9998
           KMS_PUBLIC_PATH: /tmp
@@ -207,7 +207,7 @@ jobs:
 
     services:
       kms:
-        image: cosmian/kms
+        image: cosmian/kms:4.0.1
         env:
           COSMIAN_SERVER_URL: http://localhost:9998
           KMS_PUBLIC_PATH: /tmp
