--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
     needs:
       - publish-dry-run
     uses: ./.github/workflows/js.yml
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     with:
       subcommands: |
         echo "//registry.npmjs.org/:_authToken=$NPM_ACCESS_TOKEN" > ~/.npmrc
@@ -139,7 +139,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Release
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
 
   cleanup:
