--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -14,6 +14,10 @@ on:
         required: false
         type: string
         default: ''
+      additional_artifact:
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   js-in-docker:
@@ -69,7 +73,7 @@ jobs:
           if-no-files-found: error
 
       - name: Upload dist and source
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && inputs.additional_artifact == true
         uses: actions/upload-artifact@v3
         with:
           name: cloudproof_js_${{ github.ref_name }}
