--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "editor.defaultFormatter": "ms-python.autopep8"
   },
   "python.formatting.provider": "none",
-  "cSpell.words": ["Findex", "uids", "Uids"]
+  "cSpell.words": ["Findex", "uids", "Uids"],
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#02342B",
+    "titleBar.activeBackground": "#03493C",
+    "titleBar.activeForeground": "#E9FEFA"
+  }
 }
