chore: bump version to 9.2.0

--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -13,7 +13,7 @@ on:
       kms-jwe-key:
         required: false
         type: string
-        default: null
+        default: ''
       findex-cloud-version:
         required: true
         type: string
