--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,12 @@ version: '3'
 services:
   kms:
     container_name: kms
-    image: ghcr.io/cosmian/kms:optional_attributes_objecttype
+    image: ghcr.io/cosmian/kms:4.5.0
     ports:
       - 9998:9998
+    environment:
+      JWK_PRIVATE_KEY: '{"kty": "OKP","d": "MPEVJwdRqGM_qhJOUb5hR0Xr9EvwMLZGnkf-eDj5fU8","use": "enc","crv": "X25519","kid": "DX3GC+Fx3etxfRJValQNbqaB0gs=","x":
+        "gdF-1TtAjsFqNWr9nwhGUlFG38qrDUqYgcILgtYrpTY","alg": "ECDH-ES"}'
   findex_cloud:
     image: ghcr.io/cosmian/findex_cloud:0.1.0
     ports:
