test: make KMS, Redis and Findex_cloud services mandatory

--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -69,6 +69,7 @@ jobs:
         env:
           REDIS_HOST: redis
           KMS_HOST: kms
+          FINDEX_CLOUD_HOST: findex_cloud
 
       - name: Upload non-regression test vectors
         if: inputs.regression_files != ''
